--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.6",
-    "astro": "^5.7.12"
+    "astro": "^5.7.12",
+    "katex": "^0.16.22",
+    "rehype-katex": "^7.0.1"
   },
   "devDependencies": {
     "@astrojs/tailwind": "^6.0.2",
