--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/markdown-remark": "^6.3.1",
     "@tailwindcss/vite": "^4.1.6",
     "astro": "^5.7.12",
     "katex": "^0.16.22",
-    "rehype-katex": "^7.0.1"
+    "rehype-katex": "^7.0.1",
+    "rehype-pretty-code": "^0.14.1",
+    "remark-math": "^6.0.0"
   },
   "devDependencies": {
     "tailwindcss": "^4.1.6"
