--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@astrojs/markdown-remark": "^6.3.1",
-    "@tailwindcss/vite": "^4.1.6",
     "astro": "^5.7.12",
     "katex": "^0.16.22",
     "rehype-katex": "^7.0.1",
@@ -18,6 +17,7 @@
     "remark-math": "^6.0.0"
   },
   "devDependencies": {
-    "tailwindcss": "^4.1.6"
+    "@astrojs/tailwind": "^6.0.2",
+    "tailwindcss": "^3.4.17"
   }
 }
