feat: 完成客户端搜索功能和响应式设计优化
- 成功集成 Fuse.js 实现客户端搜索功能，支持多字段搜索。
- 优化响应式设计，添加移动端菜单并调整组件布局，提升不同设备的用户体验。

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,18 @@
 {
   "extends": "astro/tsconfigs/strict",
   "include": [".astro/types.d.ts", "**/*"],
-  "exclude": ["dist"]
+  "exclude": ["dist"],
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@components/*": ["src/components/*"],
+      "@layouts/*": ["src/layouts/*"],
+      "@utils/*": ["src/utils/*"],
+      "@styles/*": ["src/styles/*"]
+    },
+    "verbatimModuleSyntax": true,
+    "types": ["astro/client"],
+    "jsx": "preserve",
+    "lib": ["dom", "dom.iterable", "esnext"]
+  }
 }
