--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "build": "astro build",
+    "build": "astro build && node src/scripts/build-search-data.js",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
     "@astrojs/markdown-remark": "^6.3.1",
     "astro": "^5.7.12",
+    "fuse.js": "^7.0.0",
     "katex": "^0.16.22",
     "rehype-katex": "^7.0.1",
     "rehype-pretty-code": "^0.14.1",
