--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "build": "astro build && node src/scripts/build-search-data.js",
+    "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
