--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astrojs/markdown-remark": "^6.3.1",
+    "@astrojs/netlify": "^6.3.2",
     "astro": "^5.7.12",
     "fuse.js": "^7.0.0",
     "katex": "^0.16.22",
