--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ccj-studio",
   "type": "module",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
@@ -16,10 +16,12 @@
     "katex": "^0.16.22",
     "rehype-katex": "^7.0.1",
     "rehype-pretty-code": "^0.14.1",
-    "remark-math": "^6.0.0"
+    "remark-math": "^6.0.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@astrojs/tailwind": "^6.0.2",
+    "@types/uuid": "^10.0.0",
     "tailwindcss": "^3.4.17"
   }
 }
