feat: 重构开发者后台，整合功能并优化用户体验
- 将开发者相关功能整合至新页面 `/developer`，并优化认证流程。
- 移除原 `/admin` 页面及其相关功能，确保功能集中管理。
- 实现密码验证逻辑，提供快速访问工具栏，提升用户操作便捷性。
- 清理不再使用的后端 API 端点，优化代码结构和可维护性。
- 添加快捷键提示面板和 UI 动画，改善用户交互体验。

--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.4",
     "@astrojs/markdown-remark": "^6.3.1",
-    "@astrojs/netlify": "^6.3.2",
-    "astro": "^5.7.12",
+    "@astrojs/netlify": "^6.3.4",
+    "astro": "^5.8.0",
     "fuse.js": "^7.0.0",
     "katex": "^0.16.22",
     "rehype-katex": "^7.0.1",
     "rehype-pretty-code": "^0.14.1",
     "remark-math": "^6.0.0",
+    "typescript": "^5.8.3",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
