--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,9 @@
     "src/**/*.tsx",
     "src/**/*.jsx"
   ],
-  "exclude": ["node_modules", "dist"]
+  "exclude": [
+    "node_modules", 
+    "dist",         
+    "src/layouts/NotesPostLayout.astro" 
+  ]
 }
