--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ccj-studio",
   "type": "module",
-  "version": "1.1.5",
+  "version": "1.1.6",
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@astrojs/tailwind": "^6.0.2",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/uuid": "^10.0.0",
     "tailwindcss": "^3.4.17"
   }
